--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <link
       href="https://fonts.googleapis.com/css2?family=Courgette&family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet">
-   <link rel="stylesheet" href="../css/index.css">
+   <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -38,11 +38,11 @@
       </a>
       <div class="navlinks">
          <div class="navlinkbox currentbox"><a class="navlink-a current-a" href="">Home</a></div>
-         <div class="navlinkbox"><a class="navlink-a" href="aboutUs.html">About us</a></div>
-         <div class="navlinkbox"><a class="navlink-a" href="services.html">Services</a></div>
-         <div class="navlinkbox"><a class="navlink-a" href="portfolio.html">Portfolio</a></div>
-         <div class="navlinkbox"><a class="navlink-a" href="blog.html">Blog</a></div>
-         <div class="navlinkbox"><a class="navlink-a" href="contact.html">contact</a></div>
+         <div class="navlinkbox"><a class="navlink-a" href="html/aboutUs.html">About us</a></div>
+         <div class="navlinkbox"><a class="navlink-a" href="html/services.html">Services</a></div>
+         <div class="navlinkbox"><a class="navlink-a" href="html/portfolio.html">Portfolio</a></div>
+         <div class="navlinkbox"><a class="navlink-a" href="html/blog.html">Blog</a></div>
+         <div class="navlinkbox"><a class="navlink-a" href="html/contact.html">contact</a></div>
       </div>
    </div>
    <!-- hero ------------------------------------------------------------------ -->
@@ -348,7 +348,7 @@
          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
             aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
          </p>
-         <img src="../images/team-1.jpg" alt="person">
+         <img src="images/team-1.jpg" alt="person">
          <p>John Doe</p>
          <p>CEO THEMEBEAN</p>
       </div>
@@ -356,7 +356,7 @@
          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
             aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
          </p>
-         <img src="../images/team-2.jpg" alt="person">
+         <img src="images/team-2.jpg" alt="person">
          <p>John Doe</p>
          <p>CEO THEMEBEAN</p>
       </div>
@@ -364,7 +364,7 @@
          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
             aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
          </p>
-         <img src="../images/team-3.jpg" alt="person">
+         <img src="images/team-3.jpg" alt="person">
          <p>John Doe</p>
          <p>CEO THEMEBEAN</p>
       </div>
@@ -372,18 +372,18 @@
          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
             aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
          </p>
-         <img src="../images/team-4.jpg" alt="person">
+         <img src="images/team-4.jpg" alt="person">
          <p>John Doe</p>
          <p>CEO THEMEBEAN</p>
       </div>
    </div>
    <!-- last ---------------------------------------------------------- -->
    <div class="last">
-      <a href=""><img src="../images/client1.png" alt=""></a>
-      <a href=""><img src="../images/client2.png" alt=""></a>
-      <a href=""><img src="../images/client3.png" alt=""></a>
-      <a href=""><img src="../images/client4.png" alt=""></a>
-      <a href=""><img src="../images/client5.png" alt=""></a>
+      <a href=""><img src="images/client1.png" alt=""></a>
+      <a href=""><img src="images/client2.png" alt=""></a>
+      <a href=""><img src="images/client3.png" alt=""></a>
+      <a href=""><img src="images/client4.png" alt=""></a>
+      <a href=""><img src="images/client5.png" alt=""></a>
    </div>
    <!-- footer -------------------------------------------------------------- -->
    <div class="footer">
@@ -415,16 +415,16 @@
          <div class="col4 column">
             <h2 class="footer-tittle">FLICKR STREM</h2>
             <div class="col4-box">
-               <img src="../images/img1.jpg" alt="">
-               <img src="../images/img2.jpg" alt="">
-               <img src="../images/img3.jpg" alt="">
+               <img src="images/img1.jpg" alt="">
+               <img src="images/img2.jpg" alt="">
+               <img src="images/img3.jpg" alt="">
                <br>
-               <img src="../images/img4.jpg" alt="">
-               <img src="../images/img5.jpg" alt="">
-               <img src="../images/img6.jpg" alt="">
+               <img src="images/img4.jpg" alt="">
+               <img src="images/img5.jpg" alt="">
+               <img src="images/img6.jpg" alt="">
                <br>
-               <img src="../images/img1.jpg" alt="">
-               <img src="../images/img2.jpg" alt="">
+               <img src="images/img1.jpg" alt="">
+               <img src="images/img2.jpg" alt="">
             </div>
          </div>
       </div>
