--- a/html/blog.html
+++ b/html/blog.html
@@ -35,7 +35,7 @@
    <div class="navbar">
       <div class="logo">Sulfur</div>
       <div class="navlinks">
-         <div class="navlinkbox "><a class="navlink-a" href="index.html">Home</a></div>
+         <div class="navlinkbox "><a class="navlink-a" href="../index.html">Home</a></div>
          <div class="navlinkbox"><a class="navlink-a" href="aboutUs.html">About us</a></div>
          <div class="navlinkbox"><a class="navlink-a" href="services.html">Services</a></div>
          <div class="navlinkbox"><a class="navlink-a" href="portfolio.html">Portfolio</a></div>
