--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -33,7 +33,7 @@
    <div class="navbar">
       <div class="logo">Sulfur</div>
       <div class="navlinks">
-         <div class="navlinkbox "><a class="navlink-a" href="index.html">Home</a></div>
+         <div class="navlinkbox "><a class="navlink-a" href="../index.html">Home</a></div>
          <div class="navlinkbox"><a class="navlink-a" href="aboutUs.html">About us</a></div>
          <div class="navlinkbox"><a class="navlink-a" href="services.html">Services</a></div>
          <div class="navlinkbox currentbox"><a class="navlink-a current-a" href="">Portfolio</a></div>
